--- a/src/style/partials/_filter.scss
+++ b/src/style/partials/_filter.scss
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+    @include container;
 }
 .formelement {
     display: flex;
