--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -30,3 +30,4 @@ body {
 @import "./partials/navbar";
 @import "./partials/banklist";
 @import "./partials/filter";
+@import "./partials/pagination";
