--- a/src/style/partials/_banklist.scss
+++ b/src/style/partials/_banklist.scss
@@ -1,13 +1,40 @@
 .bankslist {
     @include container;
+    overflow: auto;
 }
+
+.loader {
+    height: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 60px;
+    svg {
+        animation: round 1s infinite linear;
+    }
+}
+@keyframes round {
+    to {transform: rotate(360deg);}
+}
+
+
 table {
     border-collapse: collapse;
     width: 100%;
     border: 1px solid #ddd;
     text-align: center;
-    overflow: scroll;
 }
-th {
+th, td {
     @include padding(1.5);
+    font-size: 0.8em;
 }
+tr:nth-child(even) {
+    background: rgb(242, 242, 242);
+}
+tr {
+    transition: 0.1s;
+    &:hover {
+        background: rgb(230, 230, 230);
+    }
+}
+
