--- a/src/style/partials/_navbar.scss
+++ b/src/style/partials/_navbar.scss
@@ -14,6 +14,7 @@ nav {
             background: $themecolor;
             text-decoration: none;
             transition: 0.15s;
+            border: 1px solid $white;
             @include padding(1);
         }
     } 
