--- a/src/style/main.css
+++ b/src/style/main.css
@@ -11,6 +11,28 @@ body {
   color: #30302f;
 }
 
+.img {
+  max-width: 400px;
+}
+
+.btn {
+  margin: 16px;
+  margin-top: 20px;
+  display: inline-block;
+  padding: 12px 24px;
+  background: #145c9e;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+}
+
+.btn:hover {
+  -webkit-box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+}
+
 nav {
   background: #145c9e;
   color: #fdfefb;
@@ -53,14 +75,23 @@ nav .nav-list .nav-item {
 nav .nav-list .nav-item a {
   color: #fdfefb;
   text-decoration: none;
-  padding: 12px;
-  vertical-align: middle;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-transition: 0.1s;
   transition: 0.1s;
 }
 
 nav .nav-list .nav-item a svg {
   fill: #fff;
+  font-size: 1.25em;
+  margin-right: 8px;
 }
 
 nav .nav-list .nav-item a:hover {
@@ -131,6 +162,10 @@ tr:hover {
   background: #e6e6e6;
 }
 
+td.star {
+  font-size: 20px;
+}
+
 .filter {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -199,5 +234,63 @@ select, input {
 .section .page-group a.active {
   background: #145c9e;
   color: #fdfefb;
+}
+
+.lost {
+  margin-top: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.lost h2 {
+  margin-top: 30px;
+}
+
+.topfav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.section {
+  padding: 16px;
+  margin-top: 40px;
+}
+
+.section .title {
+  font-size: 60px;
+}
+
+.section p {
+  color: #333;
+  margin: 12px 0;
+}
+
+.section h3 {
+  margin-top: 20px;
+}
+
+.section ul {
+  margin: 16px;
+}
+
+.section ul li {
+  margin: 4px;
 }
 /*# sourceMappingURL=main.css.map */
