✏ Final edits, Update filter

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -50,6 +50,6 @@ body {
 @import "./partials/banklist";
 @import "./partials/filter";
 @import "./partials/pagination";
-@import "./partials/lost";
+@import "./partials/info";
 @import "./partials/favorites";
 @import "./partials/help";
