--- a/src/style/partials/_navbar.scss
+++ b/src/style/partials/_navbar.scss
@@ -37,6 +37,9 @@ nav {
                     margin-right: 8px;
                 }
                 &:hover {
+                    svg {
+                        fill: #FFD500;
+                    }
                     color: #FFD500;
                 }
             }
