--- a/src/style/main.css
+++ b/src/style/main.css
@@ -98,6 +98,10 @@ nav .nav-list .nav-item a:hover {
   color: #FFD500;
 }
 
+nav .nav-list .nav-item a:hover svg {
+  fill: #FFD500;
+}
+
 .bankslist {
   max-width: 1000px;
   margin: 20px auto;
@@ -236,22 +240,16 @@ select, input {
   color: #fdfefb;
 }
 
-.lost {
-  margin-top: 40px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+.border {
+  padding: 10px;
+  padding-left: 32px;
+  background: #f0f0f0;
+  border-left: 5px solid #145c9e;
+  font-size: 1.25em;
 }
 
-.lost h2 {
-  margin-top: 30px;
+.border svg {
+  margin-right: 8px;
 }
 
 .topfav {
